--- a/color-scheme-generator/package.json
+++ b/color-scheme-generator/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "amqplib": "^0.10.3",
     "express": "^4.18.2",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
